@@ -1,9 +1,9 @@
 package lsh.ext.gson.adapters;
 
+import java.util.List;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 
-import com.google.common.collect.ImmutableList;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import lsh.ext.gson.GsonBuilders;
@@ -27,12 +27,12 @@ public final class JsonFailSafeTypeAdapterTest
 				makeTestCase(
 						JsonFailSafeTypeAdapterFactory.getInstance().create(gson, TypeToken.get(ParameterizedTypes.listOf(String.class))),
 						"[\"foo\",\"bar\"]",
-						ImmutableList.of("foo", "bar")
+						List.of("foo", "bar")
 				),
 				makeTestCase(
 						JsonFailSafeTypeAdapterFactory.getInstance().create(gson, TypeToken.get(ParameterizedTypes.listOf(Integer.class))),
 						"[1000]",
-						ImmutableList.of(1000)
+						List.of(1000)
 				)
 		);
 	}
