@@ -6,7 +6,6 @@ import java.util.Map;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.gson.Gson;
 import com.google.gson.TypeAdapter;
@@ -37,42 +36,42 @@ public final class CoercedCollectionTypeAdapterTest
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(stringToIntegerMapTypeAdapter, ArrayList::new),
 						"{\"foo\":1,\"bar\":2}",
-						ImmutableList.of(ImmutableMap.of("foo", 1, "bar", 2))
+						List.of(ImmutableMap.of("foo", 1, "bar", 2))
 				),
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(stringTypeAdapter, ArrayList::new),
 						"\"foo\"",
-						ImmutableList.of("foo")
+						List.of("foo")
 				),
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(integerTypeAdapter, ArrayList::new),
 						"39",
-						ImmutableList.of(39)
+						List.of(39)
 				),
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(booleanTypeAdapter, ArrayList::new),
 						"true",
-						ImmutableList.of(true)
+						List.of(true)
 				),
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(stringToIntegerMapTypeAdapter, ArrayList::new),
 						"[{\"foo\":1,\"bar\":2},{\"bar\":3,\"qux\":4}]",
-						ImmutableList.of(ImmutableMap.of("foo", 1, "bar", 2), ImmutableMap.of("bar", 3, "qux", 4))
+						List.of(ImmutableMap.of("foo", 1, "bar", 2), ImmutableMap.of("bar", 3, "qux", 4))
 				),
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(stringTypeAdapter, ArrayList::new),
 						"[\"foo\",\"bar\",\"baz\"]",
-						ImmutableList.of("foo", "bar", "baz")
+						List.of("foo", "bar", "baz")
 				),
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(integerTypeAdapter, ArrayList::new),
 						"[39,42,100]",
-						ImmutableList.of(39, 42, 100)
+						List.of(39, 42, 100)
 				),
 				makeTestCase(
 						CoercedCollectionTypeAdapter.getInstance(booleanTypeAdapter, ArrayList::new),
 						"[true,false,true]",
-						ImmutableList.of(true, false, true)
+						List.of(true, false, true)
 				)
 		);
 	}
